Add some performance adjustments to LRAResource